# kinetic-py

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  auth.db  docker-compose.yml  kinetic-cli.cmd  kinetic.cmd  openai_test.py  package-lock.json  package.json  pyproject.toml  regression_test.py  test.py  test_ssml.py  test_tts.py  voice.bat  voice_chat.py
agent_sandbox/: yanmyoaung.txt
config/: agents.example.json  agents.json  models.example.json  models.json
config/coding-assistant/: SOUL.md
config/main/: SOUL.md  SOUL.md.bak
config/obsidian-assistant/: SOUL.md
config/productivity-agent/: SOUL.md
config/security-agent/: SOUL.md
config/system-agent/: SOUL.md
desktop/: index.html
docs/: architecture.md  capabilities.md  daily-life-briefing-plan.md  jarvis-plan.md  learning-loop-idea.md  learning-system-plan.md  obsidian-integration-plan.md  opencode-integration-plan.md  plan-python.md  presentation-design.md  proactive-reminders-plan.md  roadmap.md  setup.md  test-prompts.md  update-plan.md  usecase.md
docs/ideas/: skills-marketplace.md
src/: main.py
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/agents/: agent.py  guardrails.py  learning.py  memory.py  orchestrator.py  skill_learner.py
src/api/: server.py
src/cli/: __init__.py  agents.py  knowledge.py  models.py  onboard.py  (+2 more)
tests/: conftest.py  test_agent.py  test_dispatcher.py  test_memory.py  test_pipeline.py  test_provider.py  test_scheduler.py  test_tools.py  test_vector_store.py
(+64 files in other folders)
